Prevent overflow of speaker label

--- a/src/styles/TextBox.css
+++ b/src/styles/TextBox.css
@@ -1,5 +1,5 @@
 .dialogue {
-	padding: 0.5em;
+	padding: 0 0.5em 0.5em;
 	font-size: 1.5em;
 	color: var(--text);
 	background-color: var(--bg);
@@ -65,11 +65,14 @@
 /* Header: name of speaker */
 .dialogue .speaker {
 	font-family: "SqueezedPixels";
+	padding-top: 0.5em;
+	overflow: hidden;
+	white-space: pre;
+	text-overflow: ellipsis;
 
 	span {
 		position: relative;
 		top: 0.25em;
-		display: inline-block;
 		line-height: 1;
 	}
 
